Fix spacing, add button hover style

--- a/index.css
+++ b/index.css
@@ -16,15 +16,19 @@ body {
 }
 
 select {
+    /* remove default behavior */
+    appearance:none;
+    -webkit-appearance:none;
+    /* ususal styling */
     box-sizing: border-box;
-    padding: 3rem;
+    padding: 1rem;
     border-radius: 1rem;
     background-color: black;
     border: 4px solid hsl(0, 0%, 90%);
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 2rem;
-    font-size: 20px;
+    font-size: 25px;
     font-family: 'Press Start 2P', cursive;
     color: white;
 }
@@ -35,11 +39,14 @@ select > option {
     font-size: 20px;
 }
 
-img {
+.beer-img {
     object-fit: contain;
+    width: 300px;
+    height: 300px;
+    padding-top: 20px;
 }
 
-.btn {
+#beer-btn {
     /* remove default behavior */
     appearance:none;
     -webkit-appearance:none;
@@ -50,14 +57,20 @@ img {
     background-color:#b53fa7;
     color:#fff;
     font-weight:600;
-    font-size: 40px;
+    font-size: 25px;
     font-family: 'Press Start 2P', cursive;
     border-radius: 1rem;
     width:100%;
 }
 
+#beer-btn:hover {
+    background-color: white;
+    color: #b53fa7;
+}
+
 #main-question {
     margin-left: 30px;
+    margin-top: 50px;
     font-size: 40px;
     font-family: 'Press Start 2P', cursive;
     color: white;
@@ -65,6 +78,9 @@ img {
 
 #beer-results-container {
     margin-top: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 30px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     align-items: center;
